# devops-prueba-tecnica

./: .gitignore  README.md
python-app/charging_station_app/: .app.env  README.md  pyproject.toml
python-app/charging_station_app/app/: database.py  main.py  redis.py
python-app/charging_station_app/app/api/: charging_points.py  connectors.py  metrics.py  stations.py
python-app/charging_station_app/app/models/: charging_point.py  connector.py  connector_status.py  station.py
python-app/charging_station_app/app/repositories/: charging_point_repository.py  connector_repository.py  connector_status_repository.py  station_repository.py
python-app/charging_station_app/app/schemas/: charging_points_schema.py  connectors_schema.py  connectors_status_schema.py  stations_schema.py
python-app/charging_station_app/app/services/: charging_point_service.py  connector_service.py  station_service.py
python-app/charging_station_app/bruno/baseapi/: bruno.json  collection.bru
python-app/charging_station_app/bruno/baseapi/Connectors/: ChangeStatus.bru  CreateStation.bru  DeleteConnector.bru  GetConnector.bru  ListConnectors.bru
python-app/charging_station_app/bruno/baseapi/charging-points/: CreateStation.bru  DeleteChargingPoints.bru  ListChargingPoints.bru
python-app/charging_station_app/bruno/baseapi/stations/: CreateStation.bru  DeleteStation.bru  (+1 more)
python-app/charging_station_app/docker/: .app.env  .db-init.env  .grafana.env  .postgres.env  .redis.env  Dockerfile  docker-compose.yml
python-app/charging_station_app/docker/entrypoint/: init-db.sh  redis-entrypoint.sh
(+46 files in other folders)
