[tool.poetry]
name = "charging_station_app"
version = "0.1.0"
description = "System that emulates eletrical stations for electric vehicles"
authors = ["krageotero@gmail.com"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
gunicorn = "^21.2.0"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.23.1"
toml = "^0.10.2"
pytest = "^8.4.2"
redis = "^6.4.0"
prometheus-client = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
